--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-parcelize'
 def buildDate = new Date().format("yyyyMMdd_HHmm")
 
 android {
@@ -46,8 +46,8 @@ android {
             versionNameSuffix "-debug_${buildDate}"
         }
     }
-    dataBinding {
-        enabled = true
+    buildFeatures{
+        viewBinding true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
