--- a/ArLibMaplander/build.gradle
+++ b/ArLibMaplander/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-parcelize'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'maven-publish'
 
 def lifecycle_version = "2.5.1"
 def buildDate = new Date().format("yyyyMMdd_HHmm")
@@ -60,6 +61,16 @@ android {
         development {
             dimension "version"
             buildConfigField 'String', 'BASE_URL_GMLS', '" https://inmobimapa-backend-develop.appspot.com/"'
+        }
+    }
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = 'com.maplander.armaplander'
+            artifactId = 'library'
+            version = '1.1'
         }
     }
 }
