--- a/ArLibMaplander/build.gradle
+++ b/ArLibMaplander/build.gradle
@@ -4,7 +4,6 @@ apply plugin: 'kotlin-parcelize'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'maven-publish'
 
-def lifecycle_version = "2.5.1"
 def buildDate = new Date().format("yyyyMMdd_HHmm")
 
 android {
@@ -103,11 +102,11 @@ dependencies {
 
     //implementation "android.arch.lifecycle:extensions:2.2.0"
     // ViewModel
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
     // LiveData
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
     // Lifecycles only (without ViewModel or LiveData)
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
     implementation "androidx.lifecycle:lifecycle-runtime:2.5.1"
     implementation "androidx.lifecycle:lifecycle-common-java8:2.5.1"
 
@@ -116,7 +115,7 @@ dependencies {
     debugImplementation "androidx.fragment:fragment-testing:1.5.5"
 
     // Saved state module for ViewModel
-    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.5.1"
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.18'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
