--- a/ArLibMaplander/build.gradle
+++ b/ArLibMaplander/build.gradle
@@ -62,6 +62,9 @@ android {
             buildConfigField 'String', 'BASE_URL_GMLS', '" https://inmobimapa-backend-develop.appspot.com/"'
         }
     }
+    lintOptions {
+        checkReleaseBuilds false
+    }
 }
 publishing {
     publications {
@@ -119,4 +122,5 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.7'
+    implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
 }
