--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,9 @@ android {
             applicationIdSuffix ".develop"
         }
     }
+    lintOptions {
+        checkReleaseBuilds false
+    }
 }
 
 dependencies {
@@ -79,7 +82,6 @@ dependencies {
 
     // Glide - An image loading and caching library for Android
     // https://github.com/bumptech/glide
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation project(path: ':ArLibMaplander')
 
     implementation 'androidx.appcompat:appcompat:1.0.2'
@@ -90,5 +92,5 @@ dependencies {
 
     //location library
     implementation 'com.github.appoly:ARCore-Location:1.2'
-
+    implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
 }
